add_ons/ingress_gateway/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: istio-system        # ALB ingress must live in istio-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-0974dd1912ebdeb0c,subnet-02ee266e8cd11724b,subnet-0918034dbf7a1275c
    external-dns.alpha.kubernetes.io/hostname: echo.test.ahmad.com
spec:
  ingressClassName: alb
  rules:
  - host: echo.test.ahmad.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
