add_ons/ingress_gateway/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echoserver
  namespace: echoserver
spec:
  hosts:
  - echo.test.ahmad.com
  gateways:
  - echoserver-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: echoserver
        port:
          number: 80
